[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/dungeon/Room.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[node name="Room" type="Node2D"]
script = ExtResource( 1 )

[node name="Texture" type="TextureRect" parent="."]
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
mouse_filter = 0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="gui_input" from="Texture" to="." method="_on_Texture_gui_input"]
[connection signal="mouse_entered" from="Texture" to="." method="_on_Texture_mouse_entered"]
[connection signal="mouse_exited" from="Texture" to="." method="_on_Texture_mouse_exited"]
